@@ -6,18 +6,18 @@
 
 	<artifactId>spring-cloud-function-parent</artifactId>
 	<name>Spring Cloud Function Parent</name>
-	<version>3.2.2-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<parent>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-build</artifactId>
-		<version>3.1.1-SNAPSHOT</version>
+		<version>4.0.0-SNAPSHOT</version>
 		<relativePath/>
 	</parent>
 
 	<properties>
-		<java.version>1.8</java.version>
+		<java.version>17</java.version>
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 		<wrapper.version>1.0.27.RELEASE</wrapper.version>
@@ -48,8 +48,16 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
 			</plugin>
+			<plugin>
+		       <groupId>org.apache.maven.plugins</groupId>
+		       <artifactId>maven-surefire-plugin</artifactId>
+		       <configuration>
+		            <argLine>--add-opens java.base/java.util=ALL-UNNAMED</argLine>
+		       </configuration>
+		     </plugin>
 		</plugins>
 		<pluginManagement>
+			
 			<plugins>
 				<plugin>
 					<groupId>org.codehaus.mojo</groupId>
@@ -129,18 +137,18 @@
 	</reporting>
 
 	<profiles>
-		<profile>
-			<id>java11+</id>
-			<activation>
-				<jdk>[11,)</jdk>
-			</activation>
-			<dependencies>
-				<dependency>
-					<groupId>javax.annotation</groupId>
-					<artifactId>javax.annotation-api</artifactId>
-				</dependency>
-			</dependencies>
-		</profile>
+<!-- 		<profile> -->
+<!-- 			<id>java11+</id> -->
+<!-- 			<activation> -->
+<!-- 				<jdk>[11,)</jdk> -->
+<!-- 			</activation> -->
+<!-- 			<dependencies> -->
+<!-- 				<dependency> -->
+<!-- 					<groupId>javax.annotation</groupId> -->
+<!-- 					<artifactId>javax.annotation-api</artifactId> -->
+<!-- 				</dependency> -->
+<!-- 			</dependencies> -->
+<!-- 		</profile> -->
 		<profile>
 			<id>core</id>
 			<modules>
